fixed media query break points causing horizontal scroll

--- a/resources/css/mediaqueries.css
+++ b/resources/css/mediaqueries.css
@@ -1,46 +1,29 @@
-/* 2xl */
-@media (max-width: 1536px) {
-  body {
-    min-width: 1280px;
-  }
-}
+/* xs */
+@media (min-width: 475px) {
 
-/* xl */
-@media (max-width: 1280px) {
-  body {
-    min-width: 1024px;
-  }
-}
-
-/* lg */
-@media (max-width: 1024px),
-(orientation: landscape) {
-  body {
-    min-width: 768px;
-  }
-}
-
-/* md */
-@media (max-width: 768px) {
-  body {
-    min-width: 640px;
-  }
 }
 
 /* sm */
-@media (max-width: 640px) {
-  body {
-    min-width: 475px;
-  }
+@media (min-width: 640px) {
 }
 
-/* xs */
-@media (max-width: 475px) {
-  body {
-    min-width: 100%;
-  }
+/* md */
+@media (min-width: 768px) {
 
-  .only-desktop {
-    display: none;
-  }
+}
+
+/* lg */
+@media (min-width: 1024px),
+(orientation: landscape) {
+
+}
+
+/* xl */
+@media (min-width: 1280px) {
+
+}
+
+/* 2xl */
+@media (min-width: 1536px) {
+
 }
